--- a/VRChat/58/1062558.html
+++ b/VRChat/58/1062558.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/C8olEPlZUxV8lGoGPYppb2443mgQZYH8t6QMpDJ1R4="></script>
+    "5G2e+Si+s8wjIyCdwNgZyrjRaJ9NPyc2su/YJgHyc1U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「かいり」","description":"\nオリジナル3Dモデル『かいり』　について\n\n・シンプルな男の子、かいり君の3Dモデルデータです。\n\n・三角ポリゴン数　19161\n\n・リップシンク15種類のシェイプキーが設定されています。\n\n・フルボディトラッキングの動作確認は行っていません。\n\n・不具合、ご要望等ありましたら制作者のTwitterアカウントかメールアドレスへご連絡ください。\n　ハッシュタグ「#kairi3d」へ使用時の感想やスクショ等をツイートしていただけると制作者が喜びます。\n\n---------------------------------------------------\n【利用規約】\n\n・本モデルデータ及び同梱された全てのデジタルデータを購入した時点で本利用規約に同意したものとします。\n\n・利用規約の内容は変更される場合があり、常に最新のものが適用されます。\n\n\n*著作権について\n\n・本データ及びそれらを改変したデータの著作権は、かさねに帰属するものとします。\n\n\n*利用可能範囲\n\n・購入者本人のみが利用可能な場合においてのみ、VRChat等のサービスに本データをアップロードすることが可能です。\n\n・本データは主にVRChatでの使用を想定していますが、その他の目的での使用は個人利用の範囲で可能です。\n\n\n*禁止事項\n\n・本データの全てまたは一部の再配布、販売は改変の有無を問わず禁止します。\n\n・公序良俗に反する行為、政治、宗教活動を目的とした使用を禁止します。\n\n\n*改変及び一部パーツの転用について\n\n・本データの改変及び一部パーツの他モデルへの転用は個人利用の範囲で許可します。\n　ただし、改変後データ及び一部パーツを流用したデータの再配布、販売は禁止します。\n\n\n*商用利用について\n\n・本データを営利目的で利用したい場合は制作者へご連絡ください。\n\n\n*免責事項\n\n・本データを利用したことによって生じるいかなる損害、損失、その他不利益等に対して、当方は一切の責任を負いません。\n\n\n*制定日\n2019年03月12日\n\n---------------------------------------------------\n【ファイル構成】\n\n・kairi_2_00.unitypackage\n　　(セットアップ済みVRChat用モデルデータ)\n・kairi_2_00_full.fbx\n　　(洋服内の体メッシュを含めた3Dモデルデータ)\n・Textures\n　　(Textureやモデルデータが格納されたフォルダ)\n・ReadMe_はじめにお読みください.txt\n\n\n---------------------------------------------------\n【制作者】\n\n・本データは全て かさね が制作しています。\n　\n\n*連絡先\n\nTwitter : @kasane_vtuber\nmail : kasane.first.personality@gmail.com\n\n---------------------------------------------------\n【更新履歴】\n\n2018/10/23\n・販売開始(ver1.00)\n\n2018/12/13\n・Unity2017.4.15でのアップロードに対応(ver1.01)\n\n2019/03/12\n・顔のバランスを大きく変更(ver.2.00)\n\n","url":"https://booth.pm/ja/items/1062558","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/ada44999-f6fd-4fbc-94eb-6deda5275d42/i/1062558/fe5b53a9-7a01-4975-ab2d-c14372bc0869_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/C8olEPlZUxV8lGoGPYppb2443mgQZYH8t6QMpDJ1R4="></script>
+    nonce="5G2e+Si+s8wjIyCdwNgZyrjRaJ9NPyc2su/YJgHyc1U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
