--- a/VRChat/86/1063186.html
+++ b/VRChat/86/1063186.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5yGCMo/YL2R8yGbj0FZhsgBI2KprbDZj9G+E6RNE6mw="></script>
+    "lZADQCkpqGwoxwzPQwI7s51I52CvvAEmONadzIK4ubE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クラシックラジオ（３Dデータ）","description":"何の変哲もないクラシックラジオです。\n\n音楽を好きに流してください～。","url":"https://booth.pm/ja/items/1063186","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/24e4f2ac-fa91-49c1-b5e7-0486887253b8/i/1063186/3d6ebb0a-3ee4-40b0-a2f7-1b966c4b6bfc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5yGCMo/YL2R8yGbj0FZhsgBI2KprbDZj9G+E6RNE6mw="></script>
+    nonce="lZADQCkpqGwoxwzPQwI7s51I52CvvAEmONadzIK4ubE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -365,9 +365,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
