--- a/VRChat/13/1062613.html
+++ b/VRChat/13/1062613.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "KbuZzMMZz4c83Sy5ZtRKEhs9hTlev1AO5niNsyDb9Pw="></script>
+    "//f5xSOhklEYRT94RlnPN1MvfTc5aokiT4Se9mEgCdI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"けもみみおーこくの「ねこま」【Ver1.01】","description":"■Nekoma利用規約(KemomimiOukokuLICENSE)\nNekomaの利用規約は「KemomimiOukokuLICENSE」と同様となります。\nダウンロード時点での情報ではなく、WEBの情報が優先されます。\nhttps://nekomasu.wixsite.com/kemomimioukoku/character\n\nVRChat向けではありますが、ゲーム等のアプリケーションで使用されても問題ありません。\nただし、アプリケーションを有償で配布する場合は、公式のアプリケーションではない事を明示してください。\n法人規模でのデータ利用につきましては、個別にお問い合わせください。\n\n■説明\n以前、配布していたデータから細かい修正点を加えてあります。\nまた、魔法陣のテクスチャやVRM向けのトゥーンシェーダー使用時に必要なマスクなど…細かい付録があります。\n","url":"https://booth.pm/ja/items/1062613","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/cbf886eb-18da-4fa4-bd9a-a9e4f786c634/i/1062613/c1170262-b082-422f-814a-f8ff59bf8cac_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KbuZzMMZz4c83Sy5ZtRKEhs9hTlev1AO5niNsyDb9Pw="></script>
+    nonce="//f5xSOhklEYRT94RlnPN1MvfTc5aokiT4Se9mEgCdI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -362,9 +362,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
