--- a/VRChat/20/1060820.html
+++ b/VRChat/20/1060820.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Jq7uymWkXpQZcZpQ6M8yey7ILH9LRgAbpRyRF3K8QQs="></script>
+    "KjbiIB9NxJc2Rg8QUhFZo8+j3ey0JiQA3N/6ANT8lvw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向けオリジナル3Dモデル】EAF-07A1 ヴァレフォール","description":"■EAF-07A1 Valfor(ヴァレフォール)\nVRChatでの利用を想定したメカモデルです\n\n標準で増加ブースターユニットが装備されていますが、非表示にすることで素体状態にできます\n\nおまけでWeaponSet01の武器(スマートガン、ライフル2種類)が付属します（同梱のアニメーションでEGライフルが出せるように設定してあります）\n\n■更新\n・Unity 2017仕様にSDK、シェーダー等を更新しました\n\n・2018/10/22(v2)\n付属の改変用psdファイル(Option)に不具合があったので差し替えました。\nモデル側は問題ありません。色変え改変等をして不具合が出ている場合はこちらを使用して再編集の上、差し替えてください。\n\n\n■ポリゴン数(三角面)\nブースターユニット無：12,678\nブースターユニット有：18,730\n\n■フルボディトラッキングについて\n・手足の比率が人間と乖離しているため、フルトラッキング時はアバター読み込み後のキャリブレーション時、VRChatの身長設定を調整する必要があります。\n\n\n■禁止事項\n・本データの再配布は禁止です。\n・自作発言はおやめください。\n\n■許可事項\n・データの改変(パーツ取り含む)\n・営利利用\n・映像制作\n・動画配信\n\n■その他\n・アバターペデスタルへの利用は禁止します。","url":"https://booth.pm/ja/items/1060820","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1060820/bb0e212f-eaf3-4b74-8c32-5f0e4715e1dd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Jq7uymWkXpQZcZpQ6M8yey7ILH9LRgAbpRyRF3K8QQs="></script>
+    nonce="KjbiIB9NxJc2Rg8QUhFZo8+j3ey0JiQA3N/6ANT8lvw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
