--- a/VRChat/71/1061871.html
+++ b/VRChat/71/1061871.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "y9cZ6RrHldxc5GN9ja+WUAA29XIivSWwx6BYW/nVO/M="></script>
+    "4BKrWMhqzO/ParbPXPUnCrvv2gX2DtohCRJIDZj5t/s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リュックサック","description":"リュックサックです。\nポリゴン数1172。\n\n山登りに、普段使いに、両手が開くから便利なリュック。\nあなたのアバター、収納スペースが足りなかったりしませんか？\n\nオーバーライドでものを出したいけど空中から出すのはちょっと…といったお悩みをお持ちのそこのあなた！\nこれさえあれば背中に手を回すだけでいろんなものが取り出し放題！\n大変快適な四次元リュックサックを是非お手元に！\n\n21/09/11 ワンコインマーケット出店に伴い新テクスチャになりました\n\n－－－－－ご注意－－－－－\n\nリュックサックです。思想や信仰等に関する表現はできないとは思いますが、禁止いたします。\n\n改変は自由です、利便性が少ないなぁ、容量が足りないなぁ、と思ったらあなた自身の手で使いやすくできるリュックです。\n\n販売商品のため再配布はご遠慮ください。\n\n著作権は製作者に帰属します。\n\n本モデルを利用したことによって発生したいかなる損害に対しても、作者は責任を負いません。\n\n\nあとは常識の範囲で、好きに背負って楽しんでください。\n\n\n不備や不具合、ご質問等ございましたらTwitter（ https://twitter.com/kamimk3 ）までどうぞ\n","url":"https://booth.pm/ja/items/1061871","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/23ccfef0-8531-4c36-9b34-431bf45abef2/i/1061871/e2da23ff-4cd9-41e3-be62-0b596c1080ce_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y9cZ6RrHldxc5GN9ja+WUAA29XIivSWwx6BYW/nVO/M="></script>
+    nonce="4BKrWMhqzO/ParbPXPUnCrvv2gX2DtohCRJIDZj5t/s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -395,9 +395,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
