--- a/VRChat/44/1061844.html
+++ b/VRChat/44/1061844.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VVtuH90gA0TmJGKAo4fwzT3o53nydU5CZKF4+/Ee8Jw="></script>
+    "tF8kgWV+9hJn1BMFu55AqLWd28tkS0YgBUqK0n679lU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"缶","description":"缶です。\nポリゴン数1410。\n\nアルミニウムでできていそうな缶です。\nVRChat内、自動販売機のあるワールドのそばでおもむろに取り出してみるのをお勧めします。\nワールド設置して蹴る動作をしてみたり\n別配布のみかんの台座にしてみると良いと思います。\n\n－－－－－ご注意－－－－－\n\n缶です、思想や信仰にかかわる過激的表現ができてしまう可能性がありますので禁止いたします。\n\n改変は自由です、パッケージを書き換えてお酒に、炭酸飲料に、パリピウィードエナジードリンクに。\n\n再配布はできるだけご遠慮ください。\n\n念のため著作権は製作者に帰属します。\n\nあとは常識の範囲で、飲み干しちゃってください。\n\n本モデルを利用したことによって発生したいかなる損害、および空気の冷え込みに対して、作者は一切責任を負いません。\n\n\n不備や不具合、ご質問等ございましたらTwitter（ https://twitter.com/kamimk3 ）までどうぞ","url":"https://booth.pm/ja/items/1061844","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/23ccfef0-8531-4c36-9b34-431bf45abef2/i/1061844/f7ab1175-1035-4a38-aec3-ccc01b1d1c55_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VVtuH90gA0TmJGKAo4fwzT3o53nydU5CZKF4+/Ee8Jw="></script>
+    nonce="tF8kgWV+9hJn1BMFu55AqLWd28tkS0YgBUqK0n679lU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -358,9 +358,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
