--- a/VRChat/16/1060916.html
+++ b/VRChat/16/1060916.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Hat9nrusEMo2/v0zLzmqIYadlD1GHgbWAlhNqJqcVYY="></script>
+    "4u5wv09hYsC7JNnTsEJEn9AIp1K7ESmHBu0551PGrTg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】オリジナルアバター　スノウ","description":"VRChat向け、オリジナルアバター「スノウ」\n\nVRChat向けに調整したスノウちゃんです!\n揺れ物、表情等設定済みなので、UnityPackageを読み込んですぐにアップロードできます!\n(揺れ物の実装には、各自でDynamicBoneをご用意いただく必要があります)\n\n重要\nこのアバターはニコニ立体にて配布しているものをVRChat向けに調整、設定したものです。Blenderファイルはニコニ立体にて無料でDLいただけます。\nhttps://3d.nicovideo.jp/works/td43672\n\n内容物\n・表情設定済みUnityPackageデータ\n　　モデルポリゴン数 19264\n・取り扱い説明書\n","url":"https://booth.pm/ja/items/1060916","offers":{"priceCurrency":"JPY","@type":"Offer","price":"750"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1060916/f368cf65-0051-4ce8-b44b-03e0e1d657c3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Hat9nrusEMo2/v0zLzmqIYadlD1GHgbWAlhNqJqcVYY="></script>
+    nonce="4u5wv09hYsC7JNnTsEJEn9AIp1K7ESmHBu0551PGrTg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
