--- a/VRChat/08/1060708.html
+++ b/VRChat/08/1060708.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fuMKRhMBuU/y4SF0y11FB7BlIC9fRuieuRPDGwg9tyk="></script>
+    "2F7XKhZK8a10EUXCJz6MAIn22pOUxpwny1C/+ILlzMc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"雲上シェーダー【Unity／VRChatで使える】","description":"VRChat でも使える、床面を変形して雲上を再現するシェーダーです。","url":"https://booth.pm/ja/items/1060708","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1923aa83-c3b9-459f-a239-94c25ca49fb5/i/1060708/364a354f-a823-4377-a65c-a2408c8195ff_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fuMKRhMBuU/y4SF0y11FB7BlIC9fRuieuRPDGwg9tyk="></script>
+    nonce="2F7XKhZK8a10EUXCJz6MAIn22pOUxpwny1C/+ILlzMc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -487,9 +487,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
