--- a/VRChat/96/1060196.html
+++ b/VRChat/96/1060196.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YkRlMr7Dx+kV3LAHdzTAN6dxA8iNEVHUSG6irnapYUk="></script>
+    "IThA049smK6ZJ+G95DQm0ZNfFHb5f7uglu5Wr/YPhPo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「骨格標本ちゃん」","description":"VRChatでの使用を想定した3Dモデルです。\nアバターとして使ってもよし、パーツとしてもご利用いただけます。\nHumanoid対応、リップシンク設定済みです。\nVR・フルトラ動作確認済み\n△18.272\n\n◆内容物◆\nfbxファイル\nBlendファイル\nUnitypackageファイル\nテクスチャ","url":"https://booth.pm/ja/items/1060196","offers":{"priceCurrency":"JPY","@type":"Offer","price":"900"},"image":"https://booth.pximg.net/c/620x620/adaeb662-2e13-439e-acd0-f0d59980156c/i/1060196/dc168f5a-fc96-4ada-ab64-5520220ffce8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YkRlMr7Dx+kV3LAHdzTAN6dxA8iNEVHUSG6irnapYUk="></script>
+    nonce="IThA049smK6ZJ+G95DQm0ZNfFHb5f7uglu5Wr/YPhPo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -415,9 +415,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
